[project]
name = "wombo"
version = "0.5.0"
description = "I am a module for dream.ai Wombo (neural network for image generation"
authors = [
    {name = "Алексей Баев",email = "skinxedovich@vk.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=1.10.0,<3.0.0)"
]

# Group dependency
## dev
[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
## test
[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"


# RUFF linter Configuration
[tool.ruff]
line-length = 140
exclude = [
    "migrations",
    "manage.py",
]

[tool.ruff.lint]
unfixable = ["B"]
select = ["F","B","E","I","UP","N","ANN","Q"]
ignore = ["ANN002", "ANN003", "ANN101", "ANN102", "ANN204"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
