[project]
name = "wombo"
version = "0.5.0"
description = "Photo generation module. I use the dream neural network from wombo for my work."
authors = [
    {name = "Алексей Баев",email = "skinxedovich@vk.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[tool.ruff]
line-length = 140
exclude = [
    "migrations",
    "manage.py",
]

[tool.ruff.lint]
unfixable = ["B"]
select = ["F","B","E","I","UP","N","ANN","Q"]
ignore = ["ANN002", "ANN003", "ANN101", "ANN102", "ANN204"]

[[tool.uv.index]]
name = "gitverse"
url = "https://gitverse.ru/sweetdogs?tab=packages"
publish-url = "https://gitverse.ru/api/packages/sweetdogs/pypi"

